--- a/SkToisso/index.css
+++ b/SkToisso/index.css
@@ -59,10 +59,13 @@ img{
 }
 
 h1{
-    position: absolute;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 75px;
+    /*position: absolute;
     right: 360px;
     top: 10px;
-    font-size: 75px;
+    */
 }
 
 
