--- a/SkToisso/index.css
+++ b/SkToisso/index.css
@@ -3,42 +3,44 @@ header{
     border: black;
     height: 155px;
     cursor: default;
-    
 }
 
 .logo{
     position: absolute;
 }
+
 h1{
-    top: 5px;
-    justify-content: center;
-}
-
-.navegacao{
-    font-size:35px;
-    height: 75px;
-    margin-top: 20px;
     text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 75px;
+    top: 5px;
+    /*position: absolute;
+    right: 360px;
+    top: 1px;*/
+    
+}
+.navegacao{
+    /*centralizar automaticamente*/
+    font-size:35px;
+    text-align: center;
+    margin-top: 30px;
 }
 
-.navegacao li, .acesso li{
+.navegacao li{
     color: black;
     display:inline-block;
     margin: 0 0 0 25px;
     cursor: pointer;
 }
 
-.navegacao a, .acesso a{
+.navegacao a{
     text-decoration: none;
     color: black;
 }
 
- 
-.navegacao li:hover, .acesso li:hover{
+.navegacao li:hover{
     color: #C0C0C0;
     text-decoration: underline;}
-
-
 
 hr{
     margin: 0 0 0 0;
@@ -55,15 +57,6 @@ img{
     margin: 10px 10px 10px 50px;
 }
 
-h1{
-    text-align: center;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 75px;
-    /*position: absolute;
-    right: 360px;
-    top: 10px;
-    */
-}
 
 h2{
     text-align: center;
@@ -123,7 +116,6 @@ h2{
 }
 
 footer{
-    background: url("bg.jpg");
+    background: url("imagens/bg.jpg");
     padding: 50px 0;
 }
-
